--- a/src/components/content/content.css
+++ b/src/components/content/content.css
@@ -1,11 +1,10 @@
 .Content{
     text-align: center;
-    background-color: #411f9e;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: #9a9da0;
     height: 400px;
     width: 100%;
   }
