--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,7 @@
   }
   
   .App-Footer {
-    background-color: #213d25;
+    background-color: #343a40;
     display: flex;
     align-items: center;
     justify-content: center;
